# optrand-rs

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  data-n33.txt  instances.yml  msg_sizes.txt  rustfmt.toml
config/: Cargo.toml
config/src/: client.rs  error.rs  gen.rs  io.rs  lib.rs  node.rs  reconfig.rs
config/src/genconfig/: cli.yml  main.rs
consensus/: Cargo.toml
consensus/benches/: bench.rs  msgs.rs
consensus/src/: accumulator.rs  ack.rs  commit.rs  context.rs  deliver.rs  deliver_propose.rs  deliver_resp_cert.rs  deliver_sync_cert.rs  events.rs  handler.rs  lib.rs  new_epoch.rs  optimization.rs  pvss_aggregate.rs  reactor.rs  reconstruction.rs  status.rs  test.rs  util.rs  vote.rs
consensus/src/bft/node/: accumulator.rs  context.rs  mod.rs  reactor.rs
consensus/src/ev_queue/: mod.rs
consensus/src/legacy/: ack.rs  commit.rs  context.rs  deliver.rs  deliver_propose.rs  deliver_resp_cert.rs  deliver_sync_cert.rs  futurify.rs  handler.rs  new_epoch.rs  propose.rs  pvss_aggregate.rs  reactor.rs  round.rs  status.rs  util.rs
consensus/src/optimistic_sm/: ack.rs  beacon_ready.rs  beacon_share.rs  commit.rs  deliver_propose.rs  deliver_resp_cert.rs  deliver_sync_cert.rs  epoch.rs  events.rs  leader.rs  mod.rs  msg_handler.rs  optimizer.rs  propose.rs  reactor.rs  resp_cert.rs  resp_vote.rs  round.rs  state_machine.rs  status.rs  sync.rs  sync_cert.rs  sync_vote.rs  utils.rs
consensus/src/optimistic_sm/beacon/: beacon_context.rs  mod.rs
consensus/src/optimistic_sm/benches/: implement.rs  mod.rs  test.rs
consensus/src/optimistic_sm/test/: epoch_handling.rs
consensus/src/reconfig/: mod.rs  reactor.rs
consensus/src/state_machine/: commit.rs  deliver_propose.rs  deliver_sync_cert.rs  epoch.rs  events.rs  mod.rs  msg.rs  msg_handler.rs  propose.rs  round.rs  state.rs  state_machine.rs  status.rs  sync_cert.rs  sync_vote.rs  utils.rs
consensus/src/sync_sm/: beacon_context.rs  beacon_share.rs  commit.rs  deliver_propose.rs  deliver_sync_cert.rs  epoch.rs  events.rs  leader.rs  mod.rs  msg_handler.rs  optimizer.rs  propose.rs  reactor.rs  round.rs  state_machine.rs  status.rs  sync_cert.rs  sync_vote.rs  utils.rs
consensus/src/sync_sm/test/: mod.rs
consensus/src/test/: epoch_handling.rs
consensus/tests/: length.rs  propose_length.txt
crypto/: Cargo.toml
crypto/benches/: bench_accumulator.rs  bench_alg.rs  bench_bi.rs  bench_evss.rs  bench_fsbp.rs  bench_pvss.rs  quick_test.rs
crypto/src/: ark_serde.rs  baseline.rs  bench.rs  context.rs  crypto.rs  dbs.rs  dleq.rs  dummy.rs  errors.rs  fsbp.rs  hash.rs  keypairs.rs  lib.rs  precomputes.rs  pvss.rs  test.rs
data/: acc.txt  crypto-bench.ipynb  crypto-microbench.txt  data-rand.txt  data.txt  n17-sorted.txt  n3-sorted.txt  n33-sorted.txt  n9-sorted.txt  plot-comp.ipynb  sharding-microbench.ipynb
main/: Cargo.toml
main/bft/node/: Cargo.toml
main/bft/node/src/: cli.yml  main.rs
main/src/: cli.yml  io.rs  main.rs
opt_main/: Cargo.toml
opt_main/src/: main.rs
profile-info/: perf.data
reconfig-client/: Cargo.toml
reconfig-client/src/: cli.yml  main.rs
scripts/: genconfig.sh  ip_file  run-opt.sh  run-per-opt.sh  run-sync.sh  run.sh
scripts/aws/: do_setup.sh  do_test.sh  get_pvt_ips.sh  make_ip_files.sh  setup.sh  test.sh
scripts/aws/bench/: exp.sh  parse-exp.py  plot.ipynb  process.sh
scripts/aws/drand/: do_drand_setup.sh  do_start.sh  drand_setup.sh  start.sh
scripts/aws/hydrand/: do_setup.sh  setup.sh
sync_main/: Cargo.toml
sync_main/src/: io.rs  main.rs
testdata/n3-d100/: nodes-0.json  nodes-1.json  nodes-2.json
tools/genconfig/: Cargo.toml
tools/genconfig/src/: cert.rs  cli.yml  io.rs  main.rs
types/: Cargo.toml
types/src/: lib.rs  protocol.rs
types/src/brandpiper/: mod.rs
types/src/error/: mod.rs
types/src/msg/: ack.rs  block.rs  cert.rs  deliver_data.rs  generic.rs  mod.rs  propose.rs  proto.rs  reconfig.rs  storage.rs  vote.rs
types/src/msg/accumulator/: codewords.rs  mod.rs  mt.rs  test.rs  witness.rs
types/src/msg/cert/: certificate.rs  mod.rs  signature.rs  vote.rs
types/src/msg/synchs/: mod.rs  propose.rs  proto.rs
util/: Cargo.toml
util/src/: io.rs  lib.rs
util/src/codec/: block.rs  mod.rs  proto.rs  reconfig.rs  synchs.rs  tx.rs
