[package]
name = "config"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.*", features = ["yaml"]}
serde = { version = "1.0.126", features = ["derive"] }
types = { package = "types", path="../types"}
util = { package = "util", path="../util"}
crypto = { package = "crypto", path="../crypto"}
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5"
bincode = "1"
log="0"
fnv = "1"
openssl = "0.10"
rustls = "*"

[dependencies.crypto_lib]
package = "crypto"
git = "https://github.com/adithyabhatkajake/libchatter-rs"

[[bin]]
name = "genconfig"
path = "src/genconfig/main.rs"