[package]
name = "consensus"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { package = "config", path="../config"}
types = { package = "types", path="../types"}
crypto = { package = "crypto", path="../crypto"}
util = { package = "util", path="../util"}

tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
bytes = "1.0"
tokio-util = "0.6"
tokio-stream = "0.1"
async-stream = "0.3"
log = "*"
serde = { version = "1.0.126", features = ["derive"] }
num-traits = "0.2"
fnv = "1"
linked-hash-map = "0"
chrono = "0"

[dependencies.crypto_lib]
package = "crypto"
git = "https://github.com/adithyabhatkajake/libchatter-rs"

[dependencies.types_upstream]
package = "types"
git="https://github.com/adithyabhatkajake/libchatter-rs"

[dev-dependencies]
criterion = "0.3"
simple_logger = "1"

[features]
profile = []