[package]
name = "crypto"
version = "0.1.1"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
sha2 = "0.9.2"
serde = "1.0.118"
bincode = "1"
ark-serialize = { version = "0.2", default-features = true }
ark-serialize-derive = "0.2"
ark-ff = { version = "0.2", default-features = true }
ark-ec = { version = "0.2", default-features = true }
ark-poly = { version = "0.2", default-features = true }
ark-poly-commit = { version = "0.2", default-features = true }

ark-std = { version = "0.2", default-features = true }
ark-bls12-381 = { version = "0.2", default-features = true }
merkletree = "0.21"
fnv = "1"

crypto_lib = {package = "crypto", git = "https://github.com/adithyabhatkajake/libchatter-rs"}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_pvss"
harness = false