[package]
name = "crypto"
version = "0.1.1"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
sha2 = "0.9.2"
serde = {version = "1.0.126", features = [ "derive" ] }
bincode = "1"
ark-serialize = { version = "0.3", default-features = true }
ark-serialize-derive = "0.3"
ark-ff = { version = "0.3", features = ["asm"] }
ark-ec = { version = "0.3", default-features = true }
ark-poly = { version = "0.3", default-features = true }
ark-poly-commit = { version = "0.3", default-features = true }

ark-std = { version = "0.3", default-features = true }
ark-bls12-381 = { version = "0.3", default-features = true }
merkletree = "0.21"
fnv = "1"
derive_builder = "0"
log = "0"

crypto_lib = {package = "crypto", git = "https://github.com/adithyabhatkajake/libchatter-rs"}

[dev-dependencies]
criterion = "0.3"
bencher = "0"

[[bench]]
name = "bench_pvss"
harness = false

[[bench]]
name = "quick_test"
harness = false