[package]
name = "node-optrand-sync"
version = "0.1.1"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { package = "config", path="../config"}
util = { package = "util", path="../util"}
consensus = { package = "consensus", path="../consensus"}
# consensus = { package = "consensus", path="../consensus", features = ["profile"]}
types = { package = "types", path="../types"}

clap = {version = "2", features = ["yaml"]}
tokio = { version = "1", features = ["full"] }
futures = "0.3"
log="0"
simple_logger="1"
num_cpus = "1"

[dependencies.net]
package = "net"
git = "https://github.com/adithyabhatkajake/libchatter-rs"

[dependencies.config_lc]
package = "config"
git = "https://github.com/adithyabhatkajake/libchatter-rs"