[package]
name = "types"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
crypto = {package = "crypto", path = "../crypto"}
bytes = "1.0"
fnv="1"
log = "0"

[dependencies.types_upstream]
package = "types"
git="https://github.com/adithyabhatkajake/libchatter-rs"