[package]
name = "genconfig"
version = "0.1.0"
authors = ["zhtluo <zhtluo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.*", features = ["yaml"]}
config = { package = "config", path="../../config"}
types = { package = "types", path="../../types"}
crypto = { package = "crypto", path="../../crypto"}
util = { package = "util", path="../../util"}
crypto_lib = {package="crypto", git="https://github.com/adithyabhatkajake/libchatter-rs", rev="9ac36d671ed84028092c15f12d90d04195de32f0"}
