[package]
name = "node-bft"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { package = "config", path="../../../config"}
util = { package = "util", path="../../../util"}
consensus = { package = "consensus", path="../../../consensus"}
types = { package = "types", path="../../../types"}
net = {package="net",  git = "https://github.com/adithyabhatkajake/libchatter-rs" , rev="9ac36d671ed84028092c15f12d90d04195de32f0"}
config_lc = {package="config",  git = "https://github.com/adithyabhatkajake/libchatter-rs" , rev="9ac36d671ed84028092c15f12d90d04195de32f0"}
clap = {version = "2.*", features = ["yaml"]}
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.8"
log="*"
simple_logger="*"
